--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -16,7 +16,7 @@
       body { background-color: #f9f9f9; }
       .todo-list { margin-top: 30px; list-style: none; padding: 0; }
       .todo-item {
-        position: relative; background: #fff; border-left: 5px solid #1d1b1b;
+        position: relative; background: #fff;
         padding: 16px 20px 12px 28px; margin-bottom: 16px; border-radius: 8px;
         box-shadow: 0 2px 5px rgba(0,0,0,0.06); line-height: 1.5;
       }
