--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Test</a>
+          <a class="navbar-brand" href="/">Test1</a>
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
