--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -3,7 +3,9 @@
 {% block content %}
     
     <h1>Willkommen</h1>
-
+    <a href="/Test1">
+        <button>Zur Reiseplanung</button>
+    </a>
     <ul class="todo-list">
           {% for todo in todos %}
             <li class="todo-item">
