--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,11 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">Test1</a>
+
+         <a href="/Test1">
+                <button>Zur Reiseplanung</button>
+            </a>
+                  
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
