--- a/templates/base.html
+++ b/templates/base.html
@@ -55,9 +55,7 @@
           </button>
           <a class="navbar-brand" href="/">Test1</a>
 
-         <a href="/Test1">
-                <button>Zur Reiseplanung</button>
-            </a>
+         <a class="navbar-brand" href="/">Reise planen</a>
                   
         </div>
 
