--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
           </button>
           <a class="navbar-brand" href="/">Test1</a>
 
-         <a class="navbar-brand" href="/">Reise planen</a>
+         <a class="navbar-brand" href="/Test1">Reise planen</a>
                   
         </div>
 
