--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,9 @@
             <span class="icon-bar"></span>
           </button>
          
-
-         <a class="navbar-brand" href="/Test1">Reise planen</a>
+          <a class = "navbar-brand" href="/">Home</a>
+         
+          <a class="navbar-brand" href="/Test1">Reise planen</a>
                   
         </div>
 
