--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,8 @@
             <span class="icon-bar"></span>
           </button>
          
-         <a href= "/"> 
-           <button>Home</button>
+         <a class ="navbar-brand" href= "/">Home</a>
+      
           <a class="navbar-brand" href="/Test1">Reise planen</a>
                   
         </div>
