--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,8 @@
            <a class ="navbar-brand" href="/">Home</a>
       
           <a class="navbar-brand" href="/Test1">Reise planen</a>
-                  
+          
+          <a class = "navbar-brand" href="/add_trip">Reise hinzufügen</a>      
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
