--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
       
           <a class="navbar-brand" href="/Test1">Reise planen</a>
           
-          <a class = "navbar-brand" href="/Reise planen">Reise hinzufügen</a>      
+          <a class = "navbar-brand" href="/Reisen">Reise hinzufügen</a>      
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
