--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
          
            <a class ="navbar-brand" href="/">Home</a>
       
-          <a class = "navbar-brand" href="/add_trip">Reise hinzufügen</a>      
+          <a class = "navbar-brand" href="/add_trip">Reise planen</a>      
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
