--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -4,4 +4,27 @@
 <h1>Reise hinzufügen</h1>
 <p>TODO: Hier kommt ein Formular</p>
 
+<form method="POST">
+    <label for="destination">Reiseziel:</label>
+    <select id="destination" name="destination" required>
+        <option value="">Bitte wählen</option>
+        {% for dest in destinations %}
+            <option value="{{ dest['name'] }}">{{ dest['name'] }}</option>
+        {% endfor %}
+    </select>
+
+    <label for="start_date">Startdatum:</label>
+    <input type="date" id="start_date" name="start_date" required>
+    
+    <label for="end_date">Enddatum:</label>
+    <input type="date" id="end_date" name="end_date" required>
+    
+    <label for="total_budget">Budget:</label>
+    <input type="number" id="total_budget" name="total_budget" required>
+    
+    <button type="submit">Reise hinzufügen</button>
+</form>
+
+
 {% endblock %}
+
