--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -4,6 +4,15 @@
 <h1>Reise hinzufügen</h1>
 <p>TODO: Hier kommt ein Formular</p>
 
+<form method="POST">
+    <select name="country_id" required>
+        {% for r in reiseziele %}
+            <option value="{{ r.country_id }}">{{ r.country }}</option>
+        {% endfor %}
+    </select>
+    <button type="submit">Reise hinzufügen</button>
+</form>
+
 
 {% endblock %}
 
