--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -7,7 +7,7 @@
 <form method="POST">
     <select name="country_id" required>
         {% for r in reiseziele %}
-            <option value="{{ r.country_id }}">{{ r.country }}</option>
+            <option value="{{ country_id }}">{{ country }}</option>
         {% endfor %}
     </select>
     <button type="submit">Reise hinzufügen</button>
