--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{%block content %}
 <form method="POST">
     <label for="country_id">Wähle dein Reiseziel:</label>
     <select name="country_id" id="country_id">
@@ -7,3 +10,4 @@
     </select>
     <button type="submit">Trip hinzufügen</button>
 </form>
+
