--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -4,17 +4,22 @@
 <h2>Neue Reise planen</h2>
 
 <form method="POST">
-    <label for="destination_id">Wohin möchtest du reisen?</label>
-    <select name="destination_id" id="destination_id" required>
-        <option value="" disabled selected>-- Bitte ein Ziel wählen --</option>
-        {% for ziel in reiseziel %}
-            <option value="{{ ziel.id }}">
-                {{ ziel.land }}: {{ ziel.name }}
-            </option>
-        {% endfor %}
-    </select>
+    <div>
+        <label for="destination_id">Reiseziel:</label>
+        <select name="destination_id" id="destination_id" required>
+            <option value="" disabled selected>-- Bitte wählen --</option>
+            {% for ziel in reiseziel %}
+                <option value="{{ ziel.id }}">
+                    {{ ziel.country }}: {{ ziel.name }}
+                </option>
+            {% endfor %}
+        </select>
+    </div>
 
-    <br><br>
-    <button type="submit">Reise anlegen</button>
+    <br>
+    <button type="submit">Reise speichern</button>
 </form>
+
+<br>
+<a href="{{ url_for('index') }}">Abbrechen</a>
 {% endblock %}
