--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -5,7 +5,7 @@
     <h2>Neue Reise planen</h2>
     <p>Wähle dein nächstes Ziel aus unserer Datenbank:</p>
 
-    <form method="POST" action="{{ url_for('plane_reise') }}">
+    <form method="POST" action="{{ url_for('add_trip') }}">
         <div class="form-group">
             <label for="destination_id"><strong>Reiseziel auswählen:</strong></label>
             <br>
