--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -2,5 +2,8 @@
 
 {% block content %}
 <h1> Reiseziel </h1>
+<a href="/Italien">Italien</a>
+<br> 
+<a href="/Frankreich">Frankreich</a>
 
 {% endblock %}
