--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -22,6 +22,20 @@
 </div>
 
 <div>
-    <h2>Hotel</h2>
+   
+    <h2>Hotel auswählen</h2>
+
+<form>
+    <label for="hotel">Hotel:</label>
+    <select id="hotel" name="hotel">
+        <option value="">Bitte auswählen</option>
+        <option value="hotel_sonne">Hotel Sonne</option>
+        <option value="hotel_meerblick">Hotel Meerblick</option>
+        <option value="hotel_city">City Hotel</option>
+    </select>
+
+    <button type="submit">Bestätigen</button>
+</form>
+
 </div>
 {% endblock %}
