--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div style="max-width: 400px; margin: 20px auto; padding: 20px; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+<div style="max-width">
     <h1>Frankreich</h1>
     <p>Bitte wähle einen Ort für deine Planung aus:</p>
     
