--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div style="max-width">
-    <h1>Frankreich</h1>
-    <p>Bitte wähle einen Ort für deine Planung aus:</p>
+<h1>Frankreich</h1>
+<div>
+    
+    <h2>Bitte wähle einen Ort für deine Planung aus:</h2>
     
     <form>
         <label for="destination">Ort auswählen:</label>
