--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -4,7 +4,7 @@
 <h1>Frankreich</h1>
 <div>
     
-    <h2>Bitte wähle einen Ort für deine Planung aus:</h2>
+    <h2>Ort:</h2>
     
     <form>
         <label for="destination">Ort auswählen:</label>
@@ -17,14 +17,14 @@
         </select>
         
         <button type="submit">
-            Reise planen
+            bestätigen 
         </button>
     </form>
 </div>
 
 <div>
    
-    <h2>Hotel auswählen</h2>
+    <h2>Hotel</h2>
 
 <form>
     <label for="hotel">Hotel:</label>
