--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -7,7 +7,7 @@
     <h2>Ort:</h2>
     
     <form>
-        <label for="destination">Ort auswählen:</label>
+        <label for="destination">auswählen:</label>
         <select name="destination" id="destination">
             <option value="paris">Paris</option>
             <option value="nice">Nizza</option>
@@ -29,7 +29,7 @@
 <form>
     <label for="hotel">Hotel:</label>
     <select id="hotel" name="hotel">
-        <option value="">Bitte auswählen</option>
+        <option value="">auswählen</option>
         <option value="hotel_sonne">Hotel Sonne</option>
         <option value="hotel_meerblick">Hotel Meerblick</option>
         <option value="hotel_city">City Hotel</option>
