--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -27,7 +27,7 @@
     <h2>Hotel</h2>
 
 <form>
-    <label for="hotel">Hotel:</label>
+    <label for="hotel">auswählen:</label>
     <select id="hotel" name="hotel">
         <option value="">auswählen</option>
         <option value="hotel_sonne">Hotel Sonne</option>
