--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -7,8 +7,8 @@
     <h2>Ort:</h2>
     
     <form>
-        <label for="destination">auswählen:</label>
         <select name="destination" id="destination">
+            <option value="auswählen">auswählen</option>
             <option value="paris">Paris</option>
             <option value="nice">Nizza</option>
             <option value="lyon">Lyon</option>
@@ -27,8 +27,8 @@
     <h2>Hotel</h2>
 
 <form>
-    <label for="hotel">auswählen:</label>
     <select id="hotel" name="hotel">
+        <option value="auswählen">auswählen</option>
         <option value="hotel_sonne">Hotel Sonne</option>
         <option value="hotel_meerblick">Hotel Meerblick</option>
         <option value="hotel_city">City Hotel</option>
