--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -16,9 +16,7 @@
             <option value="bordeaux">Bordeaux</option>
         </select>
         
-        <button type="submit">
-            bestätigen 
-        </button>
+        <button type="submit">Bestätigen</button>
     </form>
 </div>
 
