--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -5,5 +5,5 @@
 <a href="/Italien">Italien</a>
 <br> 
 <a href="/Frankreich">Frankreich</a>
-
+<img src="https://www.nicolos-reiseblog.de/frankreich-sehenswuerdigkeiten/">
 {% endblock %}
