--- a/templates/Frankreich.html
+++ b/templates/Frankreich.html
@@ -50,5 +50,12 @@
     <button type="submit">Bestätigen</button>
 </form>
 
+    
+<form method="POST">
+  <input name="reiseziel">
+  <button>Speichern</button>
+</form>
+
+
 </div>
 {% endblock %}
