--- a/templates/Italien.html
+++ b/templates/Italien.html
@@ -1,6 +1,65 @@
 {% extends "base.html" %}
 
-{%block content %}
+
+
+{% block content %}
+
+
+
 <h1>Italien</h1>
-<p>planen</p>
+
+<form method="post">
+  <label for="reiseziel">Reiseziel:</label><br>
+
+  <select name="reiseziel" id="reiseziel" required>
+    <option value="" disabled selected>Bitte auswählen</option>
+
+    {% for ziel in reiseziele %}
+      <option value="{{ ziel.name }}">
+        {{ ziel.name }}
+      </option>
+    {% endfor %}
+  </select>
+
+  <br><br>
+  <button type="submit">Auswählen</button>
+</form>
+<div>
+
+<form method="post">
+  <label for="hotels">Hotel:</label><br>
+
+  <select name="hotels" id="hotels" required>
+    <option value="" disabled selected>Bitte auswählen</option>
+
+    {% for ziel in hotels %}
+      <option value="{{ ziel.name }}">
+        {{ ziel.name }}
+      </option>
+    {% endfor %}
+  </select>
+
+  <br><br>
+  <button type="submit">Auswählen</button>
+
+<div>
+    <label for="budget">Budget (€):</label>
+<input 
+    type="range" 
+    id="budget" 
+    name="budget" 
+    min="50" 
+    max="500" 
+    step="10" 
+    value="150"
+    oninput="budgetWert.textContent = this.value"
+>
+<span id="budgetWert">150</span> €
+</div>
+
+
+  
+    
+
+    
 {% endblock %}
