--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -74,7 +74,7 @@
 
 
   <!-- Hotel -->
- 
+ <form>
   <!-- Budget -->
   <label for="budget">Budget (€):</label>
   <input 
@@ -116,4 +116,4 @@
 
 {% endblock %}
 
-{% endblock %}
+
